Improved debug panel for IPC interface. Documentation updates.

--- a/gtk-server/documentation/gtk-server.1.html
+++ b/gtk-server/documentation/gtk-server.1.html
@@ -215,6 +215,13 @@ provided to this option to verify the certificate presented by the remote host.
 <DD>
 To be used in combination with the ssl option. This option should provide a password to decrypt
 the SSL certificate's key if the key was encrypted.
+<DT><B>-debug</B>
+
+<DD>
+The GTK-server will start a small graphical panel containing the output of the information exchange
+between client script and GTK-server. Three buttons are visible: (1) the &quot;Step&quot; button to execute
+the input from the client script line by line, (2) the &quot;Run&quot; button to let the client script execute its
+commands all at once, and (3) a &quot;Quit&quot; button to stop the GTK-server altogether.
 <P>
 </DL>
 <A NAME="lbAG">&nbsp;</A>
@@ -591,6 +598,6 @@ the sourcepackage for credits.
 This document was created by
 <A HREF="/cgi-bin/man/man2html">man2html</A>,
 using the manual pages.<BR>
-Time: 08:48:26 GMT, December 26, 2016
+Time: 09:59:56 GMT, December 30, 2016
 </BODY>
 </HTML>
