Added '-nonl' parameter.

--- a/gtk-server/documentation/gtk-server.1.html
+++ b/gtk-server/documentation/gtk-server.1.html
@@ -222,6 +222,10 @@ The GTK-server will start a small graphical panel containing the output of the i
 between client script and GTK-server. Three buttons are visible: (1) the &quot;Step&quot; button to execute
 the input from the client script line by line, (2) the &quot;Run&quot; button to let the client script execute its
 commands all at once, and (3) a &quot;Quit&quot; button to stop the GTK-server altogether.
+<DT><B>-nonl</B>
+
+<DD>
+By default, the GTK-server adds a newline after each reply. This option will prevent this from happening.
 <P>
 </DL>
 <A NAME="lbAG">&nbsp;</A>
@@ -598,6 +602,6 @@ the sourcepackage for credits.
 This document was created by
 <A HREF="/cgi-bin/man/man2html">man2html</A>,
 using the manual pages.<BR>
-Time: 08:56:06 GMT, January 01, 2017
+Time: 22:55:53 GMT, January 06, 2017
 </BODY>
 </HTML>
