--- a/gtk-server/documentation/gtk-server.1.html
+++ b/gtk-server/documentation/gtk-server.1.html
@@ -219,9 +219,10 @@ the SSL certificate's key if the key was encrypted.
 
 <DD>
 The GTK-server will start a small graphical panel containing the output of the information exchange
-between client script and GTK-server. Three buttons are visible: (1) the &quot;Step&quot; button to execute
+between client script and GTK-server. Four buttons are visible: (1) the &quot;Step&quot; button to execute
 the input from the client script line by line, (2) the &quot;Run&quot; button to let the client script execute its
-commands all at once, and (3) a &quot;Quit&quot; button to stop the GTK-server altogether.
+commands all at once, (3) the &quot;Pause&quot; button to pause such execution and (4) a &quot;Quit&quot; button to stop the
+GTK-server altogether.
 <DT><B>-nonl</B>
 
 <DD>
@@ -602,6 +603,6 @@ the sourcepackage for credits.
 This document was created by
 <A HREF="/cgi-bin/man/man2html">man2html</A>,
 using the manual pages.<BR>
-Time: 22:55:53 GMT, January 06, 2017
+Time: 20:14:29 GMT, January 17, 2017
 </BODY>
 </HTML>
