Updates in gtk_server_state for Motif.

--- a/gtk-server/documentation/gtk-server.1.html
+++ b/gtk-server/documentation/gtk-server.1.html
@@ -546,7 +546,7 @@ gtk_server_cfg -log=/tm/gtk-server.log -post=.
 <DD>
 Returns the value of a state key if it is pressed. If SHIFT is pressed, a '1' is returned, if CTRL is pressed '4', if ALT is pressed '8' and so on.
 It is required to connect the 'key-press-event' to the widget first, otherwise the event is not recognized by GTK. This function is not available
-when the GTK-server has been compiled for the XForms or Motif backend. Example:
+when the GTK-server has been compiled for the XForms backend. Example:
 <P>
 <BR>
 
@@ -624,6 +624,6 @@ the sourcepackage for credits.
 This document was created by
 <A HREF="/cgi-bin/man/man2html">man2html</A>,
 using the manual pages.<BR>
-Time: 16:49:57 GMT, January 28, 2017
+Time: 20:15:31 GMT, January 28, 2017
 </BODY>
 </HTML>
