--- a/gtk-server/documentation/gtk-server.1.html
+++ b/gtk-server/documentation/gtk-server.1.html
@@ -554,6 +554,7 @@ should be connected to the DrawingArea. This function is not available when the 
 GTK: gtk_server_connect &lt;widgetID&gt; &quot;key-press-event&quot; &quot;keypressed&quot;
 <P>
 Motif: gtk_server_connect &lt;DrawingArea&gt; XmNinputCallback &quot;keypressed&quot;
+<P>
 <DT><B>gtk_server_pack &lt;format&gt; &lt;value1&gt; [...value n]</B>
 
 <DD>
@@ -569,6 +570,30 @@ gtk_server_pack %i%i%i%i 1 1 5 6
 <BR>
 
 The returned string AQAAAAEAAAAFAAAABgAAAA== can be passed on as an argument to the function which has BASE64 as argument type.
+<P>
+<DT><B>gtk_server_unpack &lt;format&gt; &lt;base64 string&gt;</B>
+
+<DD>
+Returns an S-expression from a base64 encoded string. It can be used when one of the arguments in a GTK function is defined as PTR_BASE64 type,
+for example in case an argument contains a pointer to an array or a struct. The &lt;format&gt; specifies the type, similar as in the 'printf' function: %c is a char,
+%s means short, %i means integer, %l means long, %f means float and %d means double. Example unpacking a memory layout containing a struct with 4 integer members:
+<P>
+<BR>
+
+gtk_server_unpack %i%i%i%i AQAAAAEAAAAFAAAABgAAAA==
+<P>
+<BR>
+
+This will return the string &quot;1 1 5 6&quot;.
+<P>
+<DT><B>gtk_server_data_format &lt;format&gt;</B>
+
+<DD>
+Defines the memory layout for PTR_BASE64 arguments. It should be set before the actual function with PTR_BASE64 argument types is used. Example:
+<P>
+<BR>
+
+gtk_server_data_format %i%i%i%i
 <P>
 </DL>
 <A NAME="lbAJ">&nbsp;</A>
@@ -643,6 +668,6 @@ the sourcepackage for credits.
 This document was created by
 <A HREF="/cgi-bin/man/man2html">man2html</A>,
 using the manual pages.<BR>
-Time: 19:15:12 GMT, October 25, 2017
+Time: 19:20:40 GMT, November 25, 2017
 </BODY>
 </HTML>
