--- a/gtk-server/documentation/gtk-server.cfg.1.html
+++ b/gtk-server/documentation/gtk-server.cfg.1.html
@@ -176,11 +176,15 @@ second and third argument. The returned result will be formatted in S-expression
 the GTK-server also accepts S-expression syntax. Next to the type PTR_INT the types PTR_LONG, PTR_FLOAT,
 PTR_DOUBLE, PTR_STRING, PTR_BOOL, PTR_WIDGET and PTR_BASE64 can be used.
 <P>
-When using PTR_BASE64, the function argument will return a Base64 encoded string which contains binary data.
-Before calling the actual function, make sure to first set the memory layout of the binary data with the internal
-gtk_server_data_format function.
+When actually invoking the defined function, a dummy argument can be used in case of the numeric PTR argument
+types. Also the PTR_BASE64 type should have a dummy argument in place.
 <P>
-After that, the returned Base64 string can be decoded using the internal gtk_server_unpack function.
+The PTR_STRING and PTR_WIDGET argument types however assume a pointer with sufficiently allocated memory.
+<P>
+In case of the PTR_BASE64 type, the function argument will return a Base64 encoded string which contains binary data.
+Before invoking the actual function, make sure to first set the memory layout of the binary data with the internal
+gtk_server_data_format function. After that, the returned Base64 string can be decoded using the internal
+gtk_server_unpack function.
 <P>
 <A NAME="lbAF">&nbsp;</A>
 <H2>Macros</H2>
@@ -378,6 +382,6 @@ the sourcepackage for credits.
 This document was created by
 <A HREF="/cgi-bin/man/man2html">man2html</A>,
 using the manual pages.<BR>
-Time: 19:20:59 GMT, November 25, 2017
+Time: 18:05:16 GMT, December 02, 2017
 </BODY>
 </HTML>
