Added PTR_SHORT argument type.

--- a/gtk-server/documentation/gtk-server.cfg.1.html
+++ b/gtk-server/documentation/gtk-server.cfg.1.html
@@ -174,7 +174,7 @@ FUNCTION_NAME = gdk_window_get_pointer, NONE, WIDGET, 4, WIDGET, PTR_INT, PTR_IN
 In this case, a call to 'gdk_window_get_pointer' will return a widget but also the values stored in the
 second and third argument. The returned result will be formatted in S-expression syntax, just as
 the GTK-server also accepts S-expression syntax. Next to the type PTR_INT the types PTR_LONG, PTR_FLOAT,
-PTR_DOUBLE, PTR_STRING, PTR_BOOL, PTR_WIDGET and PTR_BASE64 can be used.
+PTR_DOUBLE, PTR_STRING, PTR_BOOL, PTR_SHORT, PTR_WIDGET and PTR_BASE64 can be used.
 <P>
 When actually invoking the defined function, a dummy argument can be used in case of the numeric PTR argument
 types. Also the PTR_BASE64 type should have a dummy argument in place.
@@ -382,6 +382,6 @@ the sourcepackage for credits.
 This document was created by
 <A HREF="/cgi-bin/man/man2html">man2html</A>,
 using the manual pages.<BR>
-Time: 18:05:16 GMT, December 02, 2017
+Time: 11:37:10 GMT, December 16, 2017
 </BODY>
 </HTML>
